# paddle-zero-copy

./: CMakeLists.txt  README.md
include/: args.hpp  common.hpp  ctc_decode.hpp  ctc_decoder.hpp  cuda_kernels.cuh  cuda_preprocess.cuh  db_postprocess.hpp  ffmpeg_cuda_decoder.hpp  ffmpeg_demuxer.hpp  ocr_engine.hpp  onnx_engine.hpp  profiler.hpp  srt_writer.hpp  subtitle_merger.hpp  trt_engine.hpp
scripts/: build.sh  download_models.sh  prepare_models.sh  run_colab.sh  setup_colab.sh
src/: args.cpp  ctc_decode.cpp  ctc_decoder.cpp  cuda_kernels.cu  cuda_preprocess.cu  db_postprocess.cpp  ffmpeg_cuda_decoder.cpp  ffmpeg_demuxer.cpp  main.cpp  ocr_engine.cpp  onnx_engine.cpp  srt_writer.cpp  subtitle_merger.cpp  trt_engine.cpp
